--- a/style.css
+++ b/style.css
@@ -4,6 +4,73 @@ html {
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
   margin: 0;
   min-height: 100vh;
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  background: #0F2027;
+}
+
+.calculator {
+  background: white;
+  width: 400px;
+  border-radius: 12px;
+  box-shadow: 0 5px 30px -5px rgba(0, 0, 0, 0.6);
+}
+
+
+/* Display */
+.calculator-display {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 0;
+  color: white;
+  background: black;
+  border-radius: 10px 10px 0 0;
+}
+
+.calculator-display h1 {
+  margin: 0;
+  padding: 25px;
+  font-size: 45px;
+  font-family: 'Lucida Console', sans-serif;
+  font-weight: 100;
+  overflow-x: auto;
+}
+
+
+/* Custom Scrollbar */
+ ::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+/* Buttons */
+.calculator-buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.equal-sign {
+  grid-column: -2;
+  grid-row: 2 / span 4;
 }
