--- a/style.css
+++ b/style.css
@@ -66,11 +66,55 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
-  border-radius: 5px;
   padding: 10px;
+}
+
+button {
+  min-height: 50px;
+  font-size: 20px;
+  font-weight: 100;
+  border: none;
+  border-radius: 5px;
+  background: rgb(184, 184, 184);
+  cursor: pointer;
+}
+
+button:hover {
+  filter: brightness(110%);
+}
+
+button:active {
+  transform: translateY(1px);
+}
+
+button:focus {
+  outline: none;
+}
+
+.operator {
+  color: white;
+  background: grey;
+  font-size: 30px;
+}
+
+.clear {
+  background: rgb(255, 54, 54);
+  color: white;
+}
+
+.clear:hover {
+  filter: brightness(90%);
 }
 
 .equal-sign {
   grid-column: -2;
   grid-row: 2 / span 4;
+  background: rgb(13, 206, 78);
+}
+
+
+@media screen and (max-width: 600px) {
+  .calculator {
+    width: 95%;
+  }
 }
